--- a/src/knownerrorfinder/KnownErrorFinder1.form
+++ b/src/knownerrorfinder/KnownErrorFinder1.form
@@ -233,8 +233,9 @@
         <Component class="javax.swing.JTable" name="logTable">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="1" rowCount="9">
+              <Table columnCount="2" rowCount="9">
                 <Column editable="true" title="Title 1" type="java.lang.Object"/>
+                <Column editable="true" title="Title 2" type="java.lang.Object"/>
               </Table>
             </Property>
           </Properties>
