Arrow-up-in progress

--- a/src/knownerrorfinder/KnownErrorFinder1.form
+++ b/src/knownerrorfinder/KnownErrorFinder1.form
@@ -253,6 +253,9 @@
           <Image iconType="3" name="/knownerrorfinder/icon-arrow-up-b-128.png"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
