--- a/src/knownerrorfinder/Panels/KnownErrorFinder1.form
+++ b/src/knownerrorfinder/Panels/KnownErrorFinder1.form
@@ -69,7 +69,7 @@
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jTabbedPane3" pref="364" max="32767" attributes="0"/>
+                  <Component id="jTabbedPane3" max="32767" attributes="0"/>
                   <Component id="logFileTabbedPane" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
