--- a/src/knownerrorfinder/MainFrame.form
+++ b/src/knownerrorfinder/MainFrame.form
@@ -160,6 +160,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Export"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="exportReportItemActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
