--- a/src/Frames/MainFrame.form
+++ b/src/Frames/MainFrame.form
@@ -211,6 +211,9 @@
   </Layout>
   <SubComponents>
     <Container class="javax.swing.JTabbedPane" name="featuresTabbedPane">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="10"/>
+      </AuxValues>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
     </Container>
